--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <elasticsearch.version>7.3.2</elasticsearch.version>
   </properties>
 
   <dependencies>
@@ -37,22 +38,20 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
-      <version>1.2.54</version>
+      <version>1.2.73</version>
     </dependency>
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>7.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.elasticsearch.client</groupId>
       <artifactId>elasticsearch-rest-high-level-client</artifactId>
-      <version>7.3.2</version>
     </dependency>
     <dependency>
       <groupId>com.github.devgcoder</groupId>
       <artifactId>monitor-boot-starter</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.2</version>
     </dependency>
   </dependencies>
   <build>
